--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ buildscript{
         mavenCentral()
         google()
         maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
         jcenter()
     }
 
@@ -11,12 +14,14 @@ buildscript{
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.7'
         classpath "com.badlogicgames.gdx:gdx-tools:1.9.10"
         classpath "com.badlogicgames.packr:packr:2.1-SNAPSHOT"
+        classpath 'com.adarshr:gradle-test-logger-plugin:1.7.0'
     }
 }
 
 allprojects{
     version = 'release'
     apply plugin: 'maven'
+    apply plugin: 'com.adarshr.test-logger'
     group = 'com.github.Anuken'
 
     ext{
@@ -194,7 +199,7 @@ project(":core"){
     apply plugin: "java"
 
     task preGen{
-        outputs.upToDateWhen{ false } 
+        outputs.upToDateWhen{ false }
         generateLocales()
         writeVersion()
     }
